--- a/app_blog/templates/base.html
+++ b/app_blog/templates/base.html
@@ -1,37 +1,55 @@
-!doctype html>
-<html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-     <title>Hello,world~</title>
-    </head>
+{% extends "bootstrap/base.html" %}
+{% block title %} UserRegister {% endblock %}
 
-    <body>
-      <!-- start of navbar -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"></a>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCz2U0AI0Z70gO2VY_LR5YbV2TRuEPX5I-bg&usqp=CAU" alt="bigbang_logo" height="50"/>
-        </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      {%block navbar%}
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#"></a>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCz2U0AI0Z70gO2VY_LR5YbV2TRuEPX5I-bg&usqp=CAU" alt="bigbang_logo" height="50"/>
+          </a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
       </button>
+      </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+          <ul class="nav navbar-nav">
             <li class="nav-item actve">
-              <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{{ url_for('artist.home') }}">Home</a>
+            </li>
+            {% if current_user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('artist.member') }}">Member</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('member') }}">Member</a>
+              <a class="nav-link" href="{{ url_for('artist.album') }}">Album</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('album') }}">Album</a>
+              <a class="nav-link" href="{{ url_for('artist.logout') }}">Logout</a>
             </li>
-         
-            
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('artist.login') }}">Login</a>
+            </li>
           </ul>
+          {% endif %}
+        </div>
         </div>
       </nav>
-      <!-- end of navbar --> 
+      {%endblock navbar%}
+      {% block content %}
+        <div class="container">
+          {% for message in get_flashed_messages() %}
+          <div class="flashes">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              {{message}}
+          </div>
+          {%endfor%}
+          {% block page_content %}{% endblock %}
+        </div> 
+      {% endblock content%}
