--- a/app_blog/templates/index.html
+++ b/app_blog/templates/index.html
@@ -1,14 +1,79 @@
-<!doctype html>
-<html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-     <title>Hello,world~</title>
-    </head>
+{% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+{% block title %} Home{% endblock title%}
+{% block page_content %}
+<div class="container">
+  <div class="container">
+    <!-- Row with collapsible content -->
+    <div class="row">
+      <div class="col text-center">
+        <a aria-expanded="false" aria-controls="seedSpecial" data-toggle="collapse" href="#seedSpecial">
+          How are U,{{current_user.username}}?
+        </a>
+        <p class="collapse" id="seedSpecial">This is home
+        </p>
+      </div>
+    </div>
+    <!-- End of row with collapsible content -->
 
-    <body>
-        
-    </body>
-</html>
+    <!-- Row with jumbotron component -->
+    <div class="row">
+      <div class="col">
+        <div class="jumbotron">
+          <h1 class="text-center font-weight-bold text-primary">Hello World~</h1>
+          <hr>
+          <p class="text-uppercase font-italic">Welcome</p>
+        </div>
+      </div>
+    </div>  
+  <!-- End of row with jumbotron component -->
+  <!-- Row with cards -->
+  <br>
+     <!-- Meet the Team Section -->
+     <div class="row bg-dark rounded-top">
+      <div class="col">
+        <h2 class="text-center text-white display-4 my-5">MUSIC</h2>
+      </div>
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://www.mirrormedia.com.tw/assets/images/20200311165152-8d379c70a45a63f582331d27db20d3cc-mobile.jpg" class="d-block w-100" alt="bigbang1">
+          <div class="carousel-caption d-none d-md-block rounded-pill">
+            <p>BIGBANG</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://www.mirrormedia.com.tw/assets/images/20220207175655-4b7463e931e599031137dbeacfb98b9f-mobile.jpeg" class="d-block w-100" alt="bigbang2">
+          <div class="carousel-caption d-none d-md-block rounded-pill">
+            <p>BIGBANG</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://pic.pimg.tw/hanzhiyu/1481892967-3893005678.png" class="d-block  w-100" alt="bigbang3">
+          <div class="carousel-caption d-none d-md-block rounded-pill">
+            <p>BIGBANG</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> -->
+  
+</div>
+{% endblock  %}
