--- a/app_blog/templates/login.html
+++ b/app_blog/templates/login.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %} Register Page {% endblock title%}
+{% block title %} Login {% endblock title%}
 {% block page_content %}
 <div class="container">
-    <h1> Register Your Account</h1>
+    <h1> Login</h1>
     <h2>Welcome To Bigbang Blog</h2>
 </div>
-<div class="col-md-4">
+<div class="col-md-4 ">
     {{wtf.quick_form(form)}}
+<p>JOIN US!
+    <a href="{{url_for('artist.register')}}">Register Account</a>
+</p>
 </div>
-{% endblock %}
+{% endblock  %}
