--- a/app_blog/templates/member.html
+++ b/app_blog/templates/member.html
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item actve">
-                <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('artist.home') }}">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('member') }}">Member</a>
+                <a class="nav-link" href="{{ url_for('artist.member') }}">Member</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('album') }}">Album</a>
+                <a class="nav-link" href="{{ url_for('artist.album') }}">Album</a>
               </li>
           
           </ul>
