--- a/app_blog/templates/login.html
+++ b/app_blog/templates/login.html
@@ -1,15 +1,17 @@
-{% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
-{% block title %} Login {% endblock title%}
-{% block page_content %}
-<div class="container">
-    <h1> Login</h1>
-    <h2>Welcome To Bigbang Blog</h2>
-</div>
-<div class="col-md-4 ">
-    {{wtf.quick_form(form)}}
-<p>JOIN US!
+{% extends "base.html" %}  
+{% import "bootstrap/wtf.html" as wtf %}  
+  
+{% block title %}Login Page{% endblock %}  
+  
+{% block page_content %}  
+<div class="page-header">  
+ <h1>Login</h1>  
+ <h2>Welcome To My Blog</h2>  
+</div>  
+<div class="col-md-4">  
+    {{wtf.quick_form(form)}}  
+   <p>JOIN US!
     <a href="{{url_for('artist.register')}}">Register Account</a>
 </p>
-</div>
-{% endblock  %}
+</div>  
+{% endblock %}
