--- a/app_blog/templates/base.html
+++ b/app_blog/templates/base.html
@@ -30,6 +30,9 @@
               <a class="nav-link" href="{{ url_for('artist.album') }}">Album</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('main.edituserinfo') }}">UserInfo</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="{{ url_for('artist.logout') }}">Logout</a>
             </li>
             {% else %}
