--- a/app_blog/templates/main/userinfo.html
+++ b/app_blog/templates/main/userinfo.html
@@ -4,6 +4,7 @@
 {% block page_content %}
 <div class="page-header">
     <h1>UserInfo</h1>
+    <h2>{{ user.username }}</h2>
 </div>
 <div>
     {% if user.location %}
@@ -13,4 +14,13 @@
      <p>{{user.about_me}}</p>
      {% endif %}
 </div>
+{% if user.blog_mains %}
+<div>
+    <ul>
+        {% for blog_main in user.blog_mains %}
+          <li>{{blog_main.blog_name}}</li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
 {% endblock%}
