--- a/app_blog/templates/member.html
+++ b/app_blog/templates/member.html
@@ -29,6 +29,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('artist.album') }}">Album</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('main.edituserinfo') }}">UserInfo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('artist.logout') }}">Logout</a>
+              </li>
           
           </ul>
         </div>
