--- a/app_blog/templates/blog/blog_post_edit.html
+++ b/app_blog/templates/blog/blog_post_edit.html
@@ -6,7 +6,11 @@
 {% block page_content %}
 <div class="page-header">
     <h1>Hello, {{current_user.username}}</h1>
+    {% if action=='edit'%}
+    <h2>Edit Your Post</h2>
+    {% else %}
     <h2>Write Your Story</h2>
+    {% endif %}
 </div>
 <div class="col-md-4">
     {{wtf.quick_form(form)}}
