--- a/app_blog/templates/base.html
+++ b/app_blog/templates/base.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="{{ url_for('artist.album') }}">Album</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('main.edituserinfo') }}">UserInfo</a>
+              <a class="nav-link" href="{{ url_for('main.userinfo',username=current_user.username) }}">UserInfo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('artist.logout') }}">Logout</a>
