--- a/app_blog/templates/main/userinfo.html
+++ b/app_blog/templates/main/userinfo.html
@@ -18,7 +18,7 @@
 <div>
     <ul>
         {% for blog_main in user.blog_mains %}
-          <li>{{blog_main.blog_name}}</li>
+          <li><a href="{{url_for('blog.post_list',blog_id=blog_main.id)}}">{{blog_main.blog_name}}</a></li>
         {% endfor %}
     </ul>
 </div>
