--- a/app_blog/templates/main/editUserInfo.html
+++ b/app_blog/templates/main/editUserInfo.html
@@ -10,5 +10,6 @@
     <div class="col-md-4">
         {{wtf.quick_form(form)}}
     </div>
+    <div>{{ _('Hello World!') }}</div>
 </div>
 {% endblock%}
