--- a/app_blog/templates/login.html
+++ b/app_blog/templates/login.html
@@ -1,9 +1,11 @@
-{% extends "base.html" %}  
-{% import "bootstrap/wtf.html" as wtf %}  
+{% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
   
-{% block title %}Login Page{% endblock %}  
+{% block title %}Login Page
+<link rel="icon" type="image/png" href="https://example.com/favicon.png"/>
+{% endblock %}  
   
-{% block page_content %}  
+{% block page_content %} 
 <div class="page-header">  
  <h1>Login</h1>  
  <h2>Welcome To My Blog</h2>  
