--- a/app_blog/templates/base.html
+++ b/app_blog/templates/base.html
@@ -1,58 +1,64 @@
 {% extends "bootstrap/base.html" %}
 {% block title %} UserRegister {% endblock %}
-
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}"/>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+{% endblock %}
       {%block navbar%}
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <a class="navbar-brand" href="#"></a>
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCz2U0AI0Z70gO2VY_LR5YbV2TRuEPX5I-bg&usqp=CAU" alt="bigbang_logo" height="50"/>
-          </a>
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-      </button>
-      </div>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="nav navbar-nav">
-            <li class="nav-item actve">
-              <a class="nav-link" href="{{ url_for('artist.home') }}">Home</a>
-            </li>
+      <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar">
+        <!-- <a class="navbar-brand mr-0 mr-md-2" href="/" aria-label="Bootstrap"><svg class="d-block" width="36" height="36" viewBox="0 0 612 612" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>Bootstrap</title><path fill="currentColor" d="M510 8a94.3 94.3 0 0 1 94 94v408a94.3 94.3 0 0 1-94 94H102a94.3 94.3 0 0 1-94-94V102a94.3 94.3 0 0 1 94-94h408m0-8H102C45.9 0 0 45.9 0 102v408c0 56.1 45.9 102 102 102h408c56.1 0 102-45.9 102-102V102C612 45.9 566.1 0 510 0z"></path><path fill="currentColor" d="M196.77 471.5V154.43h124.15c54.27 0 91 31.64 91 79.1 0 33-24.17 63.72-54.71 69.21v1.76c43.07 5.49 70.75 35.82 70.75 78 0 55.81-40 89-107.45 89zm39.55-180.4h63.28c46.8 0 72.29-18.68 72.29-53 0-31.42-21.53-48.78-60-48.78h-75.57zm78.22 145.46c47.68 0 72.73-19.34 72.73-56s-25.93-55.37-76.46-55.37h-74.49v111.4z"></path></svg> -->
+          <a class="navbar-brand mr-0 mr-md-2" href="/" aria-label="Bootstrap">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCz2U0AI0Z70gO2VY_LR5YbV2TRuEPX5I-bg&usqp=CAU" alt="bigbang_logo" height="50"/>
+            </a>
+        <div class="navbar-nav-scroll">
+          <ul class="navbar-nav bd-navbar-nav flex-row">
             {% if current_user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('artist.member') }}">Member</a>
+              <a class="nav-link active" href="{{ url_for('artist.home') }}">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('artist.album') }}">Album</a>
+              <a class="nav-link" href="{{ url_for('artist.member') }}">MEMBERS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('artist.logout') }}">Logout</a>
+              <a class="nav-link" href="{{ url_for('artist.album') }}">ALBUM</a>
             </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('artist.login') }}">Login</a>
-            </li>
+            {% endif %}
           </ul>
-          {% endif %}
         </div>
-        </div>
-        <button class="btn btn-bd-light dropdown-toggle show" id="bd-versions" data-bs-toggle="dropdown" aria-expanded="true" data-bs-display="static">
-          <span class="d-none d-lg-inline">UserInfo</span>
-        </button>
-        <!-- <ul class="dropdown-menu dropdown-menu-end show" aria-labelledby="bd-versions" data-bs-popper="static">
-          <li><a class="nav-link" href="{{ url_for('main.userinfo',username=current_user.username) }}">UserInfo</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="https://getbootstrap.com/docs/4.6/">v4.6.x</a></li>
-          <li><a class="dropdown-item" href="https://getbootstrap.com/docs/3.4/">v3.4.1</a></li>
-          <li><a class="dropdown-item" href="https://getbootstrap.com/2.3.2/">v2.3.2</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="/docs/versions/">All versions</a></li>
-        </ul> -->
-      </nav>
+        <hr class="d-md-none text-white-50">
+        <ul class="navbar-nav  ml-md-auto d-none d-md-flex">
+          <li class="nav-item dropdown">
+            <a class="nav-item nav-link dropdown-toggle mr-md-2" href="#" id="bd-versions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <img src="/static/image_folder/deb9d4887f03f2722591d42e76c94a86.png" alt="bigbang_logo" height="50"/>
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
+              {% if current_user.is_authenticated %}
+              <a class="dropdown-item" href="{{ url_for('main.edituserinfo') }}">Edituserinfo</a>
+              <a class="dropdown-item" href="{{ url_for('artist.changepassword') }}">Changepassword</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{{ url_for('artist.logout') }}">Logout</a>
+              {% else %}
+              <a class="dropdown-item" href="{{ url_for('artist.login') }}">Login</a>
+              {% endif %}
+            </div>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link p1-2 pr-1 mx-1 py-3 my-n2" href="https://www.youtube.com/channel/UCzw-C7fNfs018R1FzIKnlaA" target="_blank" >
+              <img src="/static/image_folder/YouTube.png" title="YouTube icons" height=50>
+      </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link p1-2 pr-1 mx-1 py-3 my-n2" href="https://www.instagram.com/bigbang_official/" target="_blank" >
+              <img src="/static/image_folder/ig.png" title="instagram icons" height=50>
+      </a>
+          </li>
+        </ul>
+      
+        <!-- <a class="btn btn-bd-download d-none d-lg-inline-block mb-3 mb-md-0 ml-md-3" href="https://github.com/twbs/bootstrap/archive/v4.0.0.zip">Download</a> -->
+      </header>
+  
       {%endblock navbar%}
       {% block content %}
         <div class="container">
