--- a/app_blog/templates/main/editUserInfo.html
+++ b/app_blog/templates/main/editUserInfo.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-
+{% block styles %}
+{{super()}}
+<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/styles.css')}}">
+{% endblock %}
 {% block title%} Edit UserInfo {% endblock%}
 
 {% block page_content %}
@@ -10,6 +13,5 @@
     <div class="col-md-4">
         {{wtf.quick_form(form)}}
     </div>
-    <div>{{ _('Hello World!') }}</div>
 </div>
 {% endblock%}
